# Bubblekit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  Note.txt  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.zed/: tasks.json
apps/server/: main.py
apps/server/bubblekit/: __init__.py  runtime.py  server.py
apps/server/bubblekit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/server/tests/: test_runtime.py  test_server.py
apps/web/: eslint.config.js  index.html  package.json  vite.config.ts
apps/web/public/: manifest.webmanifest  service-worker.js  sw.js
apps/web/src/: App.css  App.tsx  index.css  main.tsx  sw.js
apps/web/src/components/chat/: MarkdownLLM.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
apps/web/src/components/shell/: MainBarGenerator.tsx  Sidebar.tsx
apps/web/src/components/ui/: dropdown-menu.tsx  input-group.tsx  textarea.tsx
apps/web/src/lib/: chatApi.ts  device.ts  localCache.ts  localDb.ts  userId.ts
apps/web/src/types/: Message.ts  ui.ts
docs/: DEVELOPER_GUIDE.md  FAQ.md  RUNBOOK.md
docs/INTERNALS/: backend.md  frontend.md  runtime.md
src/: App.tsx
src/components/ui/: MainBarGenerator.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx  SidebarMenu.tsx
src/types/: Message.ts
