[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubblekit"
version = "0.1.0"
description = "My bubble utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "apps/server"}

[tool.setuptools.packages.find]
where = ["apps/server"]
include = ["bubblekit*"]
exclude = ["tests*"]
